--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.11.2",
-    "jshint-stylish": "~2.0.1"
+    "jshint-stylish": "~2.0.1",
+    "grunt-bower-concat": "~0.5.0"
   }
 }
