--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-material": "~0.10.0"
   }
 }
